# nexus-multi-vpn

./: .cursorignore  .env  .env.example  .geminiignore  .gitignore  .gitignore-test-env  ANR_FIX_VALIDATION.md  BUILD_STATUS_OPENVPN3.md  CODE_STYLE_GUIDE.md  COMPLETE_E2E_RESULTS.md  COMPREHENSIVE_TEST_SUITE.md  CONNECTIONS_SCREEN_IMPLEMENTATION.md  CONNECTION_AND_ROUTING_ISSUE.md  CPP_TEST_RESULTS.md  CPP_UNIT_TEST_PLAN.md  DATABASE_MIGRATION_GUIDE.md  DHCP_IP_ADDRESS_OPTIONS.md  DNS_ISSUE_ANALYSIS.md  DNS_ISSUE_ROOT_CAUSE.md  DOCUMENTATION_FINDINGS.md  E2E_FIX_SUMMARY.md  E2E_TESTING.md  E2E_TESTING_COMPLETE.md  E2E_TEST_READINESS.md  E2E_TEST_RESULTS.md  EXTERNAL_TUN_DIAGNOSIS.md  EXTERNAL_TUN_TEST_VALIDATION.md  FINAL_CPP_TEST_VERDICT.md  FINAL_INSTALL_STEPS.md  FINAL_ROOT_CAUSE.md  FINAL_STATUS_REPORT.md  FINAL_TEST_REPORT.md  FINAL_VALIDATION_REPORT.md  FIX_JAVA_BUILD.md  GITHUB_ACTIONS_TIMEOUT_FIX.md  ICS_OPENVPN_INTEGRATION_CHALLENGES.md  ICS_OPENVPN_INTEGRATION_PLAN.md  INSTALL_DEPENDENCIES.sh  INSTALL_JAVA17.sh  INTEGRATE_ICS_OPENVPN.md  (+74 more)
.cursor/: worktrees.json
.gemini/tmp/wireguard_test_env/: Dockerfile
.github/: copilot-instructions.md
.github/workflows/: android-ci.yml  android-e2e.yml  build-and-cache.yml  maestro-e2e.yml  release.yml  test.yml
.maestro/: 01_navigation_test.yaml  01_test_full_config_flow.yaml  02_tunnel_management_test.yaml  03_app_rules_test.yaml  04_vpn_toggle_test.yaml  05_complete_workflow_test.yaml  06_smart_app_badges_test.yaml  07_verify_routing_with_chrome.yaml  08_multi_tunnel_test.yaml  README.md
.maestro/tv/: 01_tv_navigation_dpad.yaml  02_tv_complete_workflow.yaml  README.md
app/: build.gradle.kts  proguard-rules.pro
app/openvpn-dns-domain/: auth.sh  crl.pem  openvpn.conf  ovpn_env.sh  server.conf
app/openvpn-fr/: crl.pem  openvpn.conf
app/openvpn-fr-conflict/: openvpn.conf
app/openvpn-uk/: crl.pem  openvpn.conf  ovpn_env.sh
app/openvpn-uk-conflict/: openvpn.conf  ovpn_env.sh
app/schemas/: README.md
app/src/androidTest/: AndroidManifest.xml  RUN_TESTS.md
app/src/androidTest/assets/: test_nord_credentials.json  wireguard_fr.conf  wireguard_uk.conf
app/src/androidTest/resources/: QUICK_START.md  ca-dns-domain.crt  (+1 more)
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Findlz4.cmake  FindmbedTLS.cmake  android_tun_builder.cpp  android_tun_builder.h  custom_tun_client.h  external_tun_factory.h  logging_config.h  openvpn_jni.cpp  openvpn_log_override.h  openvpn_wrapper.cpp  openvpn_wrapper.h
app/src/test/cpp/: CMakeLists.txt  bidirectional_flow_test.cpp  buffer_headroom_test.cpp  reconnect_session_test.cpp  socketpair_test.cpp
capture_tmp/: tun0.pcap
client-test/openvpn/: client.ovpn  credentials.txt
diagnostic-client-direct/: build.gradle.kts
diagnostic-client-fr/: build.gradle.kts
diagnostic-client-uk/: build.gradle.kts
diagnostic-client-uk/src/main/: AndroidManifest.xml
docker-wireguard-test/: README.md  docker-compose.yml  setup.sh
docker-wireguard-test/web-fr/: index.html
docker-wireguard-test/web-uk/: index.html
docker-wireguard-test/wireguard-fr/: .donoteditthisfile
docker-wireguard-test/wireguard-fr/peer_androidclient/: peer_androidclient.conf  presharedkey-peer_androidclient  privatekey-peer_androidclient  publickey-peer_androidclient
docker-wireguard-test/wireguard-fr/server/: privatekey-server  publickey-server
docker-wireguard-test/wireguard-fr/wg_confs/: wg0.conf
docker-wireguard-test/wireguard-uk/: .donoteditthisfile
docker-wireguard-test/wireguard-uk/peer_androidclient/: peer_androidclient.conf  presharedkey-peer_androidclient  privatekey-peer_androidclient  publickey-peer_androidclient
docker-wireguard-test/wireguard-uk/server/: privatekey-server  publickey-server
docker-wireguard-test/wireguard-uk/wg_confs/: wg0.conf
docker/openvpn-test-server/: Dockerfile  entrypoint.sh
http-dns/: index.html
openvpn-dns/: server.conf
openvpn-dns-domain/: openvpn.conf  ovpn_env.sh
openvpn-dns-domain/pki/: ca.crt  crl.pem  dh.pem  index.txt  serial  serial.old
openvpn-dns-domain/pki/issued/: vpn-server-dns-domain.crt
openvpn-dns-domain/pki/private/: ca.key  vpn-server-dns-domain.key
openvpn-dns-domain/pki/reqs/: vpn-server-dns-domain.req
openvpn-fr/: auth.sh  crl.pem  openvpn.conf  ovpn_env.sh  server.conf
openvpn-fr-conflict/: ovpn_env.sh  server.conf
openvpn-fr/pki/: ca.crt  dh.pem  index.txt  serial  serial.old
openvpn-fr/pki/certs_by_serial/: 4145B51E71A9750DEB804B9E4EB804C2.pem
openvpn-fr/pki/private/: ca.key  vpn-server-fr.key
openvpn-fr/pki/reqs/: vpn-server-fr.req
openvpn-uk/: auth.sh  openvpn.conf  ovpn_env.sh  server.conf
openvpn-uk-conflict/: server.conf
openvpn-uk/pki/: ca.crt  crl.pem  dh.pem  index.txt  serial  serial.old
openvpn-uk/pki/certs_by_serial/: 1767851B4218FD869FC48097E06B7724.pem
openvpn-uk/pki/private/: ca.key  vpn-server-uk.key
openvpn-uk/pki/reqs/: vpn-server-uk.req
scripts/: README.md  bootstrap-credentials-pixel.sh  build-and-deploy-pixel.sh  install-apk-with-retry.sh  load-env.sh  patch-ics-openvpn.sh  run-e2e-tests.sh  run-tests-with-env.sh  setup-ics-openvpn.sh  setup-openvpn3.sh  update-france-server.sh
scripts/ci/: README.md  build-cpp-tests.sh  build-debug-apk.sh  build-release-apk.sh  configure-cpp-tests.sh  download-gradle-dependencies.sh  enable-kvm.sh  evaluate-maestro-preconditions.sh  generate-env-file.sh  generate-release-summary.sh  install-android-build-deps.sh  install-cpp-build-deps.sh  install-maestro.sh  publish-maestro-summary.sh  run-cpp-tests.sh  run-instrumentation-tests.sh  run-maestro-tests.sh  run-robolectric-tests.sh  start-docker-containers.sh  stop-docker-containers.sh  validate-nordvpn-credentials.sh
test-nordvpn-creds/: CONFIG_COMPARISON.md  CONTACT_NORDVPN_SUPPORT.md  CREDENTIAL_ACTIVATION_GUIDE.md  Dockerfile  HOW_TO_REGENERATE_CREDENTIALS.md  README.md  TROUBLESHOOTING.md  check-credentials-location.md  diagnose-credentials.sh  quick-regenerate-guide.txt  test-credentials.sh  test.sh  verify-credentials.sh
(+279 files in other folders)
